# equipment-sharing-backend-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/skills/coverage-testing/: coverage-testing.md
.claude/skills/update-business-logic-docs/: update-business-logic-docs.md
.cursor/rules/: project.mdc  python-conventions.mdc
.github/workflows/: ci.yml  coverage.yml  lint.yml  release-minor.yml  test.yml  typecheck.yml
app/: main.py
app/core/: config.py  database.py  dependencies.py  enums.py  exceptions.py  identifiers.py  security.py
app/listings/: dependencies.py  models.py  router.py  schemas.py  service.py
app/media/: dependencies.py  models.py  processing.py  router.py  schemas.py  service.py  storage.py  worker.py
app/observability/: __init__.py  context.py  logs.py  tracing.py
app/orders/: dependencies.py  models.py  router.py  schemas.py  service.py  state_machine.py
app/organizations/: dependencies.py  models.py  router.py  schemas.py  service.py
app/users/: models.py  router.py  schemas.py  service.py
config/: base.yaml  dev.yaml  otel-collector-prod.yaml  otel-collector.yaml  prod.yaml  test.yaml
config/grafana/dashboards/: api-overview.json  business-events.json  infrastructure.json  traces-explorer.json
config/grafana/provisioning/datasources/: clickhouse.yaml
docs/: business-logic.md  technical-spec.md
docs/superpowers/plans/: 2026-03-23-infrastructure-and-users-plan.md  2026-03-27-listings.md  2026-03-27-organization-business-logic.md  2026-03-28-order-lifecycle.md  2026-03-29-media-s3-integration.md
docs/superpowers/specs/: 2026-03-23-infrastructure-and-users-design.md  2026-03-24-readme-design.md  2026-03-27-organization-business-logic-design.md  2026-03-28-observability-design.md  2026-03-28-order-lifecycle-design.md  2026-03-29-media-s3-integration-design.md
scripts/: init-test-db.sh
stubs/dadata/: __init__.pyi
tests/: conftest.py  test_config.py  test_e2e_media.py  test_identifiers.py  test_listings.py  test_media.py  test_media_processing.py  test_observability.py  test_order_state_machine.py  test_orders.py  test_organizations.py  test_users.py  test_worker.py
